eshtry-mny/templates/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: eshtry-mny
  labels:
    app: cart-service
    app.kubernetes.io/part-of: eshtry-mny
spec:
  selector:
    app: cart-service
  ports:
  - name: http
    port: 9003
    targetPort: 9003
