eshtry-mny/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: eshtry-mny
  labels:
    app: frontend
    app.kubernetes.io/part-of: eshtry-mny
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
