eshtry-mny/templates/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: eshtry-mny
  labels:
    app.kubernetes.io/part-of: eshtry-mny
spec:
  selector:
    app: product-service
  ports:
  - name: http
    port: 9000
    targetPort: 9000
