eshtry-mny/templates/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: eshtry-mny
  labels:
    app.kubernetes.io/part-of: eshtry-mny
spec:
  selector:
    app: user-service
  ports:
  - name: http
    port: 9001
    targetPort: 9001
