eshtry-mny/templates/kyverno-deny-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: deny-latest-image-tag
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Job
      validate:
        message: "Image tag 'latest' is not allowed. Use a specific tag or digest."
        anyPattern:
          - spec:
              template:
                spec:
                  containers:
                    - image: "!*latest"
                  initContainers:
                    - image: "!*latest"
          - spec:
              template:
                spec:
                  containers:
                    - image: "!*latest"

    - name: deny-latest-image-tag-pods
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Pod
      validate:
        message: "Image tag 'latest' is not allowed. Use a specific tag or digest."
        anyPattern:
          - spec:
              containers:
                - image: "!*latest"
              initContainers:
                - image: "!*latest"
          - spec:
              containers:
                - image: "!*latest"
