eshtry-mny/templates/kyverno-require-image-digest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-digest
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-digest
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Job
      validate:
        message: "Images must be pinned by digest (image@sha256:...). Tags are mutable and not allowed."
        anyPattern:
          - spec:
              template:
                spec:
                  containers:
                    - image: "*@sha256:*"
                  initContainers:
                    - image: "*@sha256:*"
          - spec:
              template:
                spec:
                  containers:
                    - image: "*@sha256:*"
