eshtry-mny/templates/kyverno-require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-non-root-user
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Job
      validate:
        message: "Containers must run as non-root user"
        anyPattern:
          - spec:
              template:
                spec:
                  containers:
                    - securityContext:
                        runAsNonRoot: true
                  initContainers:
                    - securityContext:
                        runAsNonRoot: true
          - spec:
              template:
                spec:
                  containers:
                    - securityContext:
                        runAsNonRoot: true
