eshtry-mny/templates/kyverno-require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-readonly-rootfs
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Job
      validate:
        message: "Containers must have readOnlyRootFilesystem: true"
        anyPattern:
          - spec:
              template:
                spec:
                  containers:
                    - securityContext:
                        readOnlyRootFilesystem: true
                  initContainers:
                    - securityContext:
                        readOnlyRootFilesystem: true
          - spec:
              template:
                spec:
                  containers:
                    - securityContext:
                        readOnlyRootFilesystem: true
