eshtry-mny/templates/kyverno-require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-resource-limits
      match:
        any:
        - resources:
            namespaces:
              - eshtry-mny
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Job
      validate:
        message: "Containers must have resource limits and requests"
        anyPattern:
          - spec:
              template:
                spec:
                  containers:
                    - resources:
                        limits:
                          cpu: "?*"
                          memory: "?*"
                        requests:
                          cpu: "?*"
                          memory: "?*"
                  initContainers:
                    - resources:
                        limits:
                          cpu: "?*"
                          memory: "?*"
                        requests:
                          cpu: "?*"
                          memory: "?*"
          - spec:
              template:
                spec:
                  containers:
                    - resources:
                        limits:
                          cpu: "?*"
                          memory: "?*"
                        requests:
                          cpu: "?*"
                          memory: "?*"
